--- a/views/home.ejs
+++ b/views/home.ejs
@@ -156,8 +156,8 @@
                 </script>
                 <!--- END COL -->
                 <div class="col-lg-4 col-md-12 col-sm-12">
-                    <div class="animated-calc mt-40">
-                        <img src="assets/img/noble.png" class="rocket-img iii" alt="img" width="400px">
+                    <div class="animated-calc mt-40  text-center">
+                        <img src="assets/img/noble.png" class="rocket-img iii" alt="img" style='width:80%;max-width: 300px;'>
                     </div>
                 </div>
                 <!--- END COL -->
@@ -220,7 +220,7 @@
                     </div>
 
 
-                    <div class="col-md-12   mt-3">
+                    <div class="section-title   mt-3">
                         <div class="download-text text-left">
 
                             <div class="color-white row">
