--- a/views/home.ejs
+++ b/views/home.ejs
@@ -110,8 +110,8 @@
                     </div>
 
                     <div class="home-btn-wrapper">
-                        <a href="#about" class="js-scroll-trigger btn-home">READ MORE</a>
-                        <a href="#registration" class="js-scroll-trigger btn-home">Buy NOBLE</a>
+                        <!-- <a href="#about" class="js-scroll-trigger btn-home">READ MORE</a> -->
+                        <a href="https://dex-trade.com/spot/trading/NOBLEUSDT" class="js-scroll-trigger btn-home">Buy NOBLE</a>
                     </div>
                 </div>
                 <style>
@@ -611,6 +611,14 @@
                                 <span>2025</span>
                                 <p>Marketplace for all types of items such as Tokopedia, Bukalapak and Shopee.</p>
                             </div>
+
+                            <div class="block block-left mt-30">
+                                <h3>NOBLE ATM</h3>
+                                <span>2027</span>
+                                <p>Noble & Crypto ATM .</p>
+                            </div>
+
+
                             <div class="circle"></div>
                         </div>
                     </div>
@@ -863,19 +871,19 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="sponsors-slider owl-carousel owl-theme">
-                        <div class="single-sponsors">
-                            <a href="#"><img class="img-fluid" src="assets/img/sponsor/1.png" alt="">
+                        <div class="single-sponsors mt-2">
+                            <a href="#"><img class="img-fluid" src="https://moonlighttoken.com/img/clients/coinmarketcap.png" alt="">
                             </a>
                         </div>
-                        <div class="single-sponsors">
-                            <a href="#"><img class="img-fluid" src="assets/img/sponsor/2.png" alt="">
+                        <div class="single-sponsors mt-2">
+                            <a href="#"><img class="img-fluid" src="https://static.coingecko.com/s/coingecko-logo-white-3f2aeb48e13428b7199395259dbb96280bf47ea05b2940ef7d3e87c61e4d8408.png" alt="">
                             </a>
                         </div>
-                        <div class="single-sponsors">
+                        <!-- <div class="single-sponsors">
                             <a href="#"><img class="img-fluid" src="assets/img/sponsor/3.png" alt="">
                             </a>
-                        </div>
-                        <div class="single-sponsors">
+                        </div> -->
+                        <!-- <div class="single-sponsors">
                             <a href="#"><img class="img-fluid" src="assets/img/sponsor/4.png" alt="">
                             </a>
                         </div>
@@ -886,7 +894,7 @@
                         <div class="single-sponsors">
                             <a href="#"><img class="img-fluid" src="assets/img/sponsor/3.png" alt="">
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -946,9 +954,10 @@
                                 </p>
                             </div>
                             <div id="faq2" class="tab-pane fade ">
-                                <h4>Lorem ipsum dolor sit amet</h4>
+                                <h4>What is BELBIRA</h4>
                                 <p>
-                                    BELBIRA is a local grocery store with thousands of regular customers spread across various locations in Indonesia
+                                    Belbira is a business community whose products consist of basic needs, household appliances, sports, health, beauty, mobile phones and electronics. Its membership consists of Indonesian citizens. Every purchase is recorded and members get a profit return
+                                    of 3.7% of total purchases, in addition members also get prizes for NOBLE token crypto assets according to their respective Shopping Points.
                                 </p>
                             </div>
                             <div id="faq4" class="tab-pane fade">
@@ -961,7 +970,7 @@
                                 <h4>Can i trade Noble Token</h4>
                                 <p>Yes You can trade NOBLE at.</p>
                                 <ul class="list-group">
-                                    <li class="list-group-item">Dex-trade.com</li>
+                                    <li class="list-group-item"> <a href='https://dex-trade.com/spot/trading/NOBLEUSDT'>Dex-trade.com</a></li>
                                     <li class="list-group-item">Pancakeswap</li>
 
                                 </ul>
@@ -994,75 +1003,35 @@
 
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
+                    .
+                </div>
+                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
                     <div class="team text-center rounded p-3 py-4">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                        <img src="assets/yogi.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
                         <div class="content mt-3">
-                            <h4 class="title mb-0">Lisa Martin</h4>
-                            <small class="text-muted">Founder</small>
-                            <ul class="list-unstyled mt-3 social-icon social mb-0">
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
-                            </ul>
+                            <h4 class="title mb-0">Mr Yogi</h4>
+                            <small class="text-muted">Founder</small><br>
+                            <button class="  mt-3   mb-0">
+                                <a href="https://www.linkedin.com/in/mr-yogi-belbira/" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a>
+                            </button>
                             <!--end icon-->
                         </div>
                     </div>
                 </div>
                 <!--end col-->
 
-                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
-                    <div class="team text-center rounded p-3 py-4">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar8.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
-                        <div class="content mt-3">
-                            <h4 class="title mb-0">Calvin Carlo</h4>
-                            <small class="text-muted">C.E.O.</small>
-                            <ul class="list-unstyled mt-3 social-icon social mb-0">
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
-                            </ul>
-                            <!--end icon-->
-                        </div>
-                    </div>
-                </div>
+
                 <!--end col-->
 
                 <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
                     <div class="team text-center rounded p-3 py-4">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                        <img src="assets/damar.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
                         <div class="content mt-3">
-                            <h4 class="title mb-0">Richha Jotchi</h4>
-                            <small class="text-muted">Manager</small>
-                            <ul class="list-unstyled mt-3 social-icon social mb-0">
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
-                            </ul>
-                            <!--end icon-->
-                        </div>
-                    </div>
-                </div>
-                <!--end col-->
-
-                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
-                    <div class="team text-center rounded p-3 py-4">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
-                        <div class="content mt-3">
-                            <h4 class="title mb-0">Cristino Murfy</h4>
-                            <small class="text-muted">Accountant</small>
-                            <ul class="list-unstyled mt-3 social-icon social mb-0">
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
-                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
-                            </ul>
+                            <h4 class="title mb-0">Damar S</h4>
+                            <small class="text-muted">Accountant</small><br>
+                            <button class="  mt-3   mb-0">
+                                <a href="https://www.linkedin.com/in/damar-belbira/" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a>
+                            </button>
                             <!--end icon-->
                         </div>
                     </div>
@@ -1184,11 +1153,9 @@
                             <div class="widget-content">
                                 <div class="text">NOBLE Token is Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. </div>
                                 <ul class="social-links">
-                                    <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+
+                                    <li title="TELEGRAM ANNOUNCEMENT"><a href="https://t.me/nobleannouncement" title=''><span class="fa fa-telegram"></span></a></li>
+                                    <li title="TELEGRAM GROUP"><a href="https://t.me/nobletokengroup"><span class="fa fa-telegram"></span></a></li>
                                 </ul>
                             </div>
                         </div>
